--- a/estilo.css
+++ b/estilo.css
@@ -33,6 +33,7 @@ margin: auto 50px ;
 
 .logo h1{
     font-size: 28px;
+    min-width: 460px;
 }
 
 
@@ -45,15 +46,15 @@ form{
     padding: 15px 15px 30px 15px;
     text-align: center;
     border-radius: 6px;
-    box-shadow: 0px 5px 17px 0px rgba(0,0,0,0.09);
+    box-shadow: 0px 5px 17px 0px rgba(0, 0, 0, 0.171);
 }
 
 
 
 form input{
     width: 364px;
-    margin-bottom: 10px;
-    padding: 17px 0;
+    margin-bottom: 15px;
+    padding: 14px 0;
     border-radius: 6px;
     border: 1px solid rgba(124, 121, 121, 0.377);
     font-size: 16px;
@@ -61,45 +62,65 @@ form input{
     background: white;
 }
 
+input:focus{
+    outline: auto 1px #1670e59d;
+}
+
 form button{ 
     width: 364px;
+    cursor: pointer;
     border: none;
-    padding: 17px 0;
+    padding: 14px 0;
     border-radius: 6px;
-    background: #166FE5;
+    background: #1670e5dc;
     color: white;
     font-size: 20px;
     font-weight: bold;
     margin-bottom: 15px;
+    transition: .3s;
 
 }
 
-form a{
+form button:hover{
+    background:#1670e5;
+}
+
+form .esqueceu{
     font-size: 14px;
     color: #166FE5;
     background:white;
 }
 
+form .esqueceu:hover{
+    text-decoration: underline;
+}
+
 form   .linha{
     margin-top: 15px;
+    font-weight: bolder;
     border: 1px solid rgba(124, 121, 121, 0.192);
-    margin-bottom: 35px;
+    margin-bottom: 40px;
 }
 
 form .criar{
     width: 180px;
     color: white;
-    padding: 15px 19px;
-    background: #3ebd25;
+    padding: 14px 19px;
+    background: #3ebd25d3;
     font-size: 17px;
     font-weight: bold ;
     border-radius: 6px;
+    text-decoration: none;
+    transition: .3s;
+}
+
+form .criar:hover{
+    background: #3ebd25;
 }
 
 
-
 .dica{
-    margin-top: 20px;
+    margin-top: 30px;
 
 }
 
@@ -108,4 +129,8 @@ form .criar{
     font-weight: bold;
     font-size: 14px;
     width: 100px;
+}
+
+.dica a:hover{
+    text-decoration: underline;
 }
